# hs-java

./: .gitignore  README.md  TestGen.hs  format  hs-java.cabal  stack.yaml
JVM/: Assembler.hs  Builder.hs  ClassFile.hs  Common.hs  Converter.hs  Dump.hs  Exceptions.hs
JVM/Builder/: Instructions.hs  Monad.hs
Java/: ClassPath.hs  IO.hs  JAR.hs  Lang.hs  META.hs
Java/ClassPath/: Common.hs  Types.hs
Java/JAR/: Archive.hs
Java/META/: Parser.hs  Spec.hs
src/: DumpClass.hs  RebuildClass.hs  TestGen.hs
src/JVM/: AccessFlag.hs  ClassFile.hs  Converter.hs  Dump.hs  Exceptions.hs
src/JVM/Attributes/: InnerClasses.hs
src/JVM/BitMask/: BitMask.hs
src/JVM/Builder/: Monad.hs
src/Java/: ClassPath.hs  JAR.hs
src/Java/ClassPath/: Common.hs  Types.hs
src/Java/JAR/: Archive.hs
test/JVM/: ConverterSpec.hs
test/Java/JAR/: ArchiveSpec.hs
test/resources/converterspec/: ACMEBicycle.java  AnonInsideMethod.java  InnerClass.java  Rectangle.java  StaticInit.java
