Name:           hs-java
Version:        0.4.1
Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         Ilya V. Portnov
Maintainer:     portnov84@rambler.ru
Synopsis:       Java .class files assembler/disassembler
Category:       Jvm
Build-Type:     Simple
Description:    This package declares data types for Java .class files format and functions
                to assemble/disassemble Java bytecode. See dump-class.hs, rebuild-class.hs,
                TestGen.hs for examples of usage.
                .
                As of version 0.4.0, all generator functions can work with any
                instance of GeneratorMonad class, not only MonadState GState.
Bug-reports: http://redmine.iportnov.ru/projects/hs-java/

library
  Hs-Source-Dirs:  src

  Exposed-Modules: JVM.Common
                   JVM.ClassFile
                   JVM.Assembler
                   JVM.Converter
                   JVM.Builder
                   JVM.Builder.Monad
                   JVM.Builder.Instructions
                   JVM.Dump
                   JVM.Exceptions
                   JVM.Attributes.InnerClasses
                   JVM.BitMask.BitMask
                   JVM.AccessFlag
                   Java.Lang
                   Java.IO
                   Java.ClassPath
                   Java.ClassPath.Types
                   Java.ClassPath.Common
                   Java.JAR
                   Java.JAR.Archive
                   Java.META
                   Java.META.Types
                   Java.META.Spec
                   Java.META.Parser
                   TestGen
                   DumpClass
                   RebuildClass

  Build-Depends:
      array
    , base >= 3 && <= 5
    , binary
    , binary-state
    , bytestring
    , containers
    , data-binary-ieee754
    , data-default >= 0.5.0
    , directory
    , exceptions
    , filepath
    , Glob
    , MissingH
    , mtl
    , parsec >= 3 && <4
    , safe-exceptions-checked
    , utf8-string
    , zip

  ghc-options: -fwarn-unused-imports

Source-repository head
  type:     git
  location: git@gitorious.org:hs-java/hs-java.git

test-suite spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Spec.hs

  build-depends:
      base >= 3 && <= 5
    , binary
    , bytestring
    , directory
    , filepath
    , hspec ==2.*
    , hs-java
    , temporary
    , zip

  other-modules:
    Java.JAR.ArchiveSpec,
    JVM.ConverterSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*